...
                        </cells>
                        <connections>
                            <outlet property="dataSource" destination="WSn-EL-NJX" id="Q0p-kN-Fhu"/>
                            <outlet property="delegate" destination="WSn-EL-NJX" id="mJR-hY-0HX"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Trending Movies" id="dqD-2w-GU0"/>
                </collectionViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Fba-Ug-70a" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="431.19999999999999" y="158.77061469265368"/>
        </scene>
        <!--Movie View Controller-->
...
                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Fbn-OD-YNc">
                                                <rect key="frame" x="0.0" y="168" width="359" height="73"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V9B-bp-8Fg">
                                                        <rect key="frame" x="0.0" y="0.0" width="179.5" height="73"/>
                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                        <state key="normal" title="Trailer"/>
                                                        <connections>
                                                            <action selector="openTrailer:" destination="4IE-7U-Kjn" eventType="touchUpInside" id="YTe-LQ-Lvi"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i7H-Ob-fFh">
                                                        <rect key="frame" x="179.5" y="0.0" width="179.5" height="73"/>
                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                        <state key="normal" title="Homepage"/>
                                                        <connections>
                                                            <action selector="openHomepage:" destination="4IE-7U-Kjn" eventType="touchUpInside" id="qTT-N9-JHb"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                            </stackView>
...
